components/observability/otel-collector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: observability
  labels:
    app: otel-collector
spec:
  type: ClusterIP
  ports:
    - port: 4317
      targetPort: 4317
      name: otlp-grpc
      protocol: TCP
    - port: 4318
      targetPort: 4318
      name: otlp-http
      protocol: TCP
    - port: 8889
      targetPort: 8889
      name: prom-metrics
      protocol: TCP
  selector:
    app: otel-collector
